# AMBER

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: combined_attributions_indoor.csv  combined_attributions_indoor_species.csv  feature_importance.ipynb
src/microbiome_model/: train_orig.py
src/microbiome_model/baselines/: other_models.py
src/microbiome_model/data/: dataset.py  dataset_sparse.py  embedding_loader.py  optimized_embedding_loader.py
src/microbiome_model/eval/: evaluate.py
src/microbiome_model/losses/: core.py
src/microbiome_model/models/: __init__.py  orig.py  zoo.py
src/microbiome_model/training/: train_orig.py
src/microbiome_model/utils/: misc.py
